--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,15 @@
         <%= link_to 'ratings', ratings_path %>
     </div>
     <%= yield %>
+    <% if session[:last_rating].nil? %>
+      <p>no ratings given</p>
+    <% else %>
+      <p>previous rating: <%= session[:last_rating] %></p>
+    <% end %>
+    <% if not session[:user_id].nil? %>
+      <p><%= User.find(session[:user_id]).username %> signed in</p>
+    <% end %>
+
+
   </body>
 </html>
