--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,22 @@
         <%= link_to 'breweries', breweries_path %>
         <%= link_to 'beers', beers_path %>
         <%= link_to 'ratings', ratings_path %>
+        <%= link_to 'users', users_path %>
+        |
+        <% if current_user %>
+          <%= link_to current_user.username, user_path(current_user.id) %>
+          <%= link_to 'Rate a new beer', new_rating_path %>
+          <%= link_to 'Sign out', session_path, data: { turbo_method: :delete } %>
+        <% else %>
+        <%= link_to 'Sign up', new_user_path %>
+        <%= link_to 'Sign in', new_session_path %>
+        <% end %>
     </div>
     <%= yield %>
     <% if session[:last_rating].nil? %>
       <p>no ratings given</p>
     <% else %>
       <p>previous rating: <%= session[:last_rating] %></p>
-    <% end %>
-    <% if not session[:user_id].nil? %>
-      <p><%= User.find(session[:user_id]).username %> signed in</p>
     <% end %>
 
 
