--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,12 @@
         <%= link_to 'beers', beers_path %>
         <%= link_to 'ratings', ratings_path %>
         <%= link_to 'users', users_path %>
+        <%= link_to 'clubs', beer_clubs_path %>
         |
         <% if current_user %>
           <%= link_to current_user.username, user_path(current_user.id) %>
           <%= link_to 'Rate a new beer', new_rating_path %>
+          <%= link_to 'Join a club', new_membership_path %>
           <%= link_to 'Sign out', session_path, data: { turbo_method: :delete } %>
         <% else %>
         <%= link_to 'Sign up', new_user_path %>
