--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -13,8 +13,8 @@
     </div>
   <% end %>
 
-  <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s) %>
-  score: <%= f.number_field :score %>
-  <%= f.submit %>
+  <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :name) %>
+  <%= f.submit 'Join' %>
 
 <% end %>
+
