--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,15 +3,15 @@
 <h3>Username:</h3>
 <p><%= @user.username %></p>
 
+<p><%= "Has made #{@user.ratings.count} #{'rating'.pluralize(@user.ratings.count)}, average rating #{@user.average_rating}"  %></p>
 
-<h3>Club memberships</h3>
+<p><strong>Member of</strong></p>
 <ul>
 <% @user.beer_clubs.each do |bc|%>
-<li><%= "#{bc.name}, #{bc.city}" %></li>
+<li><%= link_to "#{bc.name}", beer_club_path(bc.id) %></li>
 <% end %>
 </ul>
 
-<p><%= "Has made #{@user.ratings.count} #{'rating'.pluralize(@user.ratings.count)}, average rating #{@user.average_rating}"  %></p>
 <p><strong>ratings</strong></p>
 <ul>
   <% @user.ratings.each do |r| %>
