--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :name) %>
+  <%= f.select :beer_club_id, options_from_collection_for_select(@valid_beer_clubs, :id, :name) %>
   <%= f.submit 'Join' %>
 
 <% end %>
