--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,16 @@
     <%= form.text_field :username %>
   </div>
 
+   <div>
+    <%= form.label :password, style: "display: block"%>
+    <%= form.password_field :password %>
+  </div>
+
+  <div>
+    <%= form.label :password_confirmation, style: "display: block"%>
+    <%= form.password_field :password_confirmation %>
+  </div> 
+
   <div>
     <%= form.submit %>
   </div>
