Viikko3 Heroku-bugit korjattu

--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -5,8 +5,8 @@
 <div>
   <h3>Members</h3>
   <ul>
-    <% @members.each do |m|%>
-      <li><%= link_to m.username, user_path(m.id) %></li>
+    <% @beer_club.users.each do |m| %>
+      <li><%= link_to "#{m.username}" , user_path(m.id) %></li>
     <% end %>
   </ul>
 </div>
