--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,5 +1,6 @@
 <h2>List of ratings</h2>
 
+<p><strong><%= "Number of ratings: #{Rating.count}" %></strong></p>
 <ul>
  <% @ratings.each do |r| %>
    <li> 
