--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -8,5 +8,5 @@
   <% end %>
 </div>
 
-<%= link_to "New beer", new_beer_path %>
+<%= link_to('New Beer', new_beer_path) if current_user %>
 <%= link_to "list of breweries", breweries_path %>
