--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -11,6 +11,14 @@
   <br>
   
   <% if current_user %>
+    <h4>give a rating:</h4>
+
+    <%= form_with(model: @rating) do |form| %>
+      <%= form.hidden_field :beer_id %>
+      score: <%= form.number_field :score %>
+      <%= form.submit "Create rating" %>
+    <% end %>
+    <br>
     <%= link_to "Edit this beer", edit_beer_path(@beer) %> |
     <%= button_to "Destroy this beer", @beer, method: :delete %>
   <% end %>
