--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -13,6 +13,11 @@
 
 <div>
   <% if current_user %>
+    <%= form_with(model: @membership) do |form| %>
+      <%= form.hidden_field :beer_club_id, value: @beer_club.id %>
+      <%= form.hidden_field :user_id, value: current_user.id %>
+      <%= form.submit "Join the beer club" %>
+    <% end %>
     <%= link_to "Edit this beer club", edit_beer_club_path(@beer_club) %> |
     <%= button_to "Destroy this beer club", @beer_club, method: :delete %>
   <% end %>
