--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -16,8 +16,16 @@
     <%= form_with(model: @membership) do |form| %>
       <%= form.hidden_field :beer_club_id, value: @beer_club.id %>
       <%= form.hidden_field :user_id, value: current_user.id %>
+      <%= form.hidden_field :id, value: @membership_id %>
       <%= form.submit "Join the beer club" %>
     <% end %>
+  <% end %>
+  <% if current_user && current_user.beer_clubs.map(&:id).include?(@beer_club.id) %>
+      <%= form_for(@current_membership, method: :delete) do |form| %>
+        <%= form.hidden_field :beer_club_id, value: @beer_club.id %>
+        <%= form.hidden_field :user_id, value: current_user.id %>
+        <%= form.submit "End the membership" %>
+      <% end %>
     <%= link_to "Edit this beer club", edit_beer_club_path(@beer_club) %> |
     <%= button_to "Destroy this beer club", @beer_club, method: :delete %>
   <% end %>
