--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,11 +1,28 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Beers</h1>
 
 <div id="beers">
-  <% @beers.each do |beer| %>
-    <%= render beer %>
-  <% end %>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <strong>
+        <th>Beer</th>
+        <th>Style</th>
+        <th>Brewery</th>
+        <th>Rating</th>
+        </strong>
+      </tr>
+    </thead>
+    <tbody>
+      <% @beers.each do |beer| %>
+        <tr>
+          <td><%= link_to beer.name, beer %></td>
+          <td><%= link_to beer.style.name, beer.style %></td>
+          <td><%= link_to beer.brewery.name, beer.brewery %></td>
+          <td><%= beer.average_rating %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 
 <%= link_to('New Beer', new_beer_path) if current_user %>
