--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -13,8 +13,8 @@
     </div>
   <% end %>
 
-  <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s, selected: @rating.beer_id) %>
-  score: <%= f.number_field :score %>
-  <%= f.submit %>
+  <p>beer: <%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s, selected: @rating.beer_id) %></p>
+  <p>score: <%= f.number_field :score %></p>
+  <p><%= f.submit class: "btn btn-primary" %></p>
 
 <% end %>
