--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,11 +31,11 @@
 </ul>
 <div>
   <% if @user == current_user %>
-    <%= link_to "Edit this user", edit_user_path(@user) %> |
+    <%= link_to "Edit this user", edit_user_path(@user), class: "btn btn-primary" %> |
   <% end %>
-  <%= link_to "Back to users", users_path %>
+  <%= link_to "Back to users", users_path, class: "btn btn-primary"%>
 
   <% if @user == current_user %>
-    <%= button_to "Destroy this user", @user, method: :delete %>
+    <%= button_to "Destroy this user", @user, method: :delete, class: "btn btn-danger" %>
   <% end %>
 </div>
