--- a/app/views/beer_clubs/_form.html.erb
+++ b/app/views/beer_clubs/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.label :name, style: "display: block", class: "form-label" %>
+    <%= form.text_field :name, class: "input-group-text"%>
   </div>
 
   <div>
-    <%= form.label :founded, style: "display: block" %>
-    <%= form.number_field :founded %>
+    <%= form.label :founded, style: "display: block", class: "form-label"%>
+    <%= form.number_field :founded, class: "input-group-text"%>
   </div>
 
   <div>
-    <%= form.label :city, style: "display: block" %>
-    <%= form.text_field :city %>
+    <%= form.label :city, style: "display: block", class: "form-label" %>
+    <%= form.text_field :city, class: "input-group-text"%>
   </div>
 
   <div>
