--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item pulse">
               <%= link_to 'breweries', breweries_path, { class: "nav-link" } %>
             </li>
             <li class="nav-item">
@@ -42,7 +42,7 @@
             |
             <% if current_user %>
               <div class="dropdown" >
-                <button class="btn btn-secondary dropdown-toggle bg-dark no-border" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-secondary bg-dark no-border" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark">
@@ -59,7 +59,7 @@
                     <div class="dropdown-divider"></div>
                   </li>
                   <li class="dropdown-item">
-                    <%= link_to "Sign out", signout_path, class: "", data: {turbo_method: :delete} %>
+                    <%= link_to "Sign out", signout_path, class: "signout", data: {turbo_method: :delete} %>
                   </li>
                 </ul>
               </div>
@@ -86,11 +86,10 @@
           <%= yield %>
         </div>
         <div class="col-sm-4">
-          <img
-            src="http://www.cs.helsinki.fi/u/mluukkai/wadror/pint.jpg"
-            width="200"
-            style="padding-top:30px"
-          >
+          <figure class="figure">
+            <img class="img-fluid rounded" style="padding-top:30px" src="http://www.cs.helsinki.fi/u/mluukkai/wadror/pint.jpg">
+            <figcaption class="figure-caption">What we live for</figcaption>
+          </figure>
         </div>
       </div>
     </div>
