--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -1,12 +1,14 @@
 <div id="<%= dom_id brewery %>">
-  <p>
-    <h2><%= link_to brewery.name, brewery %></h2>
-  </p>
-
+  <h2>
+    <%= brewery.name %>
+    <% if not brewery.active  %>
+      <span class="badge bg-secondary">retired</span>
+    <% end %>
+  </h2>
   <p>
     <i>Established in <%= brewery.year %></i>
   </p>
-  <p>Beers count: <%= @brewery.beers.count %> </p>
+  <p>Beers count: <%= brewery.beers.count %> </p>
   <p>
   <% brewery.beers.each do |beer| %>
   <%= link_to beer.name, beer %>
