--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -23,7 +23,7 @@
             <p><%= b.name %></p>
           </div>
           <div class="col">
-            <p><%= b.average_rating %></p>
+            <p><%= round(b.average_rating) %></p>
           </div>
         </div>
       <% end %>
