--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -24,9 +24,7 @@
         <%= form.hidden_field :user_id, value: current_user.id %>
         <%= form.submit "End the membership" %>
       <% end %>
-    <%= link_to "Edit this beer club", edit_beer_club_path(@beer_club) %> |
-    <%= button_to "Destroy this beer club", @beer_club, method: :delete %>
+    <%= edit_and_destroy_buttons(@beer_club) %>
   <% end %>
-
     <%= link_to "Back to beer clubs", beer_clubs_path %>
 </div>
