--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -24,6 +24,8 @@
         <%= form.hidden_field :user_id, value: current_user.id %>
         <%= form.submit "End the membership" %>
       <% end %>
+  <% end %>
+  <% if current_user.admin == true %>
     <%= edit_and_destroy_buttons(@beer_club) %>
   <% end %>
     <%= link_to "Back to beer clubs", beer_clubs_path %>
