--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -16,10 +16,10 @@
       score: <%= form.number_field :score %>
       <%= form.submit "Create rating" %>
     <% end %>
-    <br>
-    <%= link_to "Edit this beer", edit_beer_path(@beer) %> |
-    <%= button_to "Destroy this beer", @beer, method: :delete %>
   <% end %>
 
-    <%= link_to "Back to beers", beers_path %>
+  <% if current_user.admin == true %>
+    <%= edit_and_destroy_buttons(@beer) %>
+  <% end %>
+  <%= link_to "Back to beers", beers_path %>
 </div>
