--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -3,9 +3,10 @@
 <div>
   <p><%= @brewery.print_rating %></p>
   <% if current_user %>
-    <%= link_to "Edit this brewery", edit_brewery_path(@brewery) %> | 
-    <%= button_to "Destroy this brewery", @brewery, method: :delete %>
+    <%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), data: {turbo_method: "post"}, class: "btn btn-primary" %>
   <% end %>
-
-    <%= link_to "Back to breweries", breweries_path %>
+  <% if current_user.admin %>
+    <%= edit_and_destroy_buttons(@brewery) %>
+  <% end %>
+  <%= link_to "Back to breweries", breweries_path %>
 </div>
