--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,17 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>Username:</strong>
-    <%= user.username %>
+  <strong>Username:</strong>
+  <%= user.username %>
+  <% if user.account_closed && current_user.admin%>
+    <span class="badge bg-danger">closed</span>
+  <% end %>
   </p>
+  <p><%= "Has made #{user.ratings.count} #{'rating'.pluralize(user.ratings.count)}, average rating #{user.average_rating}"  %></p>
+
+  <p>Favorite style:
+  <%= user.favorite_style %></p>
+
+  <p>Favorite brewery:
+  <%= user.favorite_brewery.name if not user.favorite_brewery.nil? %></p>
 
 </div>
