--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,8 @@
-<p><strong>Username:</strong>
-<%= @user.username %></p>
+<%= render @user %>
 
-<p><%= "Has made #{@user.ratings.count} #{'rating'.pluralize(@user.ratings.count)}, average rating #{@user.average_rating}"  %></p>
-
-<p><strong>Favorite style:</strong>
-<%= @user.favorite_style %></p>
-
-<p><strong>Favorite brewery:</strong>
-<%= @user.favorite_brewery.name if not @user.favorite_brewery.nil? %></p>
+<% if current_user.admin %>
+  <%= link_to "change account status", toggle_account_user_path(@user.id), data: {turbo_method: "post"}, class: "btn btn-primary" %>
+<% end %>
 
 <p><strong>Member of</strong></p>
 <ul>
