--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -5,7 +5,7 @@
   <% if current_user %>
     <%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), data: {turbo_method: "post"}, class: "btn btn-primary" %>
   <% end %>
-  <% if current_user.admin %>
+  <% if current_user && current_user.admin %>
     <%= edit_and_destroy_buttons(@brewery) %>
   <% end %>
   <%= link_to "Back to breweries", breweries_path %>
