--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -25,7 +25,7 @@
         <%= form.submit "End the membership" %>
       <% end %>
   <% end %>
-  <% if current_user.admin == true %>
+  <% if current_user && current_user.admin %>
     <%= edit_and_destroy_buttons(@beer_club) %>
   <% end %>
     <%= link_to "Back to beer clubs", beer_clubs_path %>
