--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,15 +1,13 @@
 <h1>Beers</h1>
 
 <div id="beers">
-  <table class="table table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <strong>
-        <th>Beer</th>
-        <th>Style</th>
-        <th>Brewery</th>
-        <th>Rating</th>
-        </strong>
+        <th><%= link_to "Name", beers_path(order: "name")%></th>
+        <th><%= link_to "Style", beers_path(order: "style")%></th>
+        <th><%= link_to "Brewery", beers_path(order: "brewery")%></th>
+        <th><%= link_to "Rating", beers_path(order: "rating")%></th>
       </tr>
     </thead>
     <tbody>
