--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Beers</h1>
-
+<% cache "beerlist-#{@order}", skip_digest: true do %>
 <div id="beers">
   <table class="table table-striped table-hover">
     <thead>
@@ -22,6 +22,7 @@
     </tbody>
   </table>
 </div>
+<% end %>
 
 <%= link_to('New Beer', new_beer_path) if current_user %>
 <%= link_to "list of breweries", breweries_path %>
