--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,3 +1,6 @@
+<%
+=begin
+%>
 <h1>Breweries</h1>
 
 <h2>Active</h2>
@@ -24,3 +27,34 @@
 <%= link_to "List of beers", beers_path%>
 </p>
 <%= link_to("New brewery", new_brewery_path, class:"btn btn-primary") if current_user %>
+<%
+=end
+%>
+
+<h1>Listing breweries</h1>
+
+<% cache 'brewerylist', skip_digest: true do %>
+<p> Number of active breweries: <%= @active_breweries.count %> </p>
+<div id="active_breweries">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Founded</th>
+        <th>Beers</th>
+        <th>Rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @active_breweries.each do |brewery| %>
+        <tr>
+          <td><%= link_to brewery.name, brewery %></td>
+          <td><%= brewery.year %></td>
+          <td><%= brewery.beers.count %></td>
+          <td><%= round(brewery.average_rating) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<% end %>
